add email; del douban; al copyright

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -77,7 +77,7 @@
                     {% endif %}
                     -->
 
-                    
+                    <!--
                     {% if site.douban_username %}
                     <li>
                         <a href="http://www.douban.com/people/{{ site.douban_username }}">
@@ -88,13 +88,25 @@
                         </a>
                     </li>
                     {% endif %}
-                       
-                    
+                    -->
 
-                </ul>
+                    {% if site.email_username %}
+                    <li>
+                        <a href="mailto:{{ site.email_username }}">
+                            <span class="fa-stack fa-lg">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </li>
+                    {% endif %}
+                       
+
                 <p class="copyright text-muted">
-                &copy; 2016~{{ site.time | date: '%Y' }} {{ site.owner.name }} ♪ Powered by Jekyll.
+                Copyright &copy; {{ site.copyright_name }} 2016~{{ site.time | date: '%Y' }}
                 </p>
+
+
             </div>
         </div>
     </div>
