--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -103,7 +103,7 @@
                        
 
                 <p class="copyright text-muted">
-                Copyright &copy; {{ site.owner_name }} 2016~{{ site.time | date: '%Y' }}
+                Copyright &copy; {{ site.owner.name }} 2016~{{ site.time | date: '%Y' }}
                 </p>
 
 
