--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -158,6 +158,7 @@ var duoshuoQuery = {short_name:"yucan"};
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 
+<script id="dsq-count-scr" src="//zhyucan.disqus.com/count.js" async></script>
 
 </script>
 
